Fix missing allow method cros config